align fix

--- a/easybank/index.scss
+++ b/easybank/index.scss
@@ -374,10 +374,6 @@ html, body {
             place-items: center;
             grid-template-rows: 100%;
             grid-template-columns: 100%;
-            button {
-            }
-            &__copyright {
-            }
         }
     }
 }
